# maxdp

./: .gitignore  LICENSE  README.md
src/: 2ge.cpp  2ge.h  CMakeLists.txt  bal.cpp  bal.h  balvns.cpp  balvns.h  cmdline.cpp  cmdline.h  color.cpp  color.h  constructive.cpp  constructive.h  coudert.cpp  coudert.h  dynamicbalance.cpp  dynamicbalance.h  dynamicdispersion.cpp  dynamicdispersion.h  ec.cpp  ec.h  generateinstance.cpp  generateinstances.sh  lowerbound.cpp  lowerbound.h  main.cpp  main.h  mcmf.h  oscillate.cpp  oscillate.h  pre.h  random.h  readinstance.cpp  readinstance.h  solution.cpp  solution.h  stats.cpp  stats.h  ub.cpp  ub.h  (+11 more)
src/btdsatur/: bkdmain.cpp  bktdsat.cpp  bktdsat.h  colorrtns.cpp  colorrtns.h  graph.cpp  graph.h  maxclique.cpp  maxclique.h  mysys.h
src/cmake/: Findcplex.cmake  Findfmt.cmake
src/julia/: fkn.sh  instance.jl  mdp.jl
src/tabucol/: PartialColAndTabuCol.cpp  PartialColAndTabuCol.h  README.md  initializeColoring.cpp  initializeColoring.h  manipulateArrays.cpp  manipulateArrays.h  reactcol.cpp  reactcol.h  tabu.cpp  tabu.h
src/tabucol/util/: Graph.cpp  Graph.h  color.h  inputGraph.cpp  inputGraph.h  manipulateArrays.cpp  manipulateArrays.h  solution.cpp  solution.h  tabu.cpp  tabu.h  util.cpp  util.h
